[package]
name = "dedup_dataset" # the name of the package
version = "1.0.0"    # the current version, obeying semver

authors = ["Nicholas Carlini <nicholas@carlini.com>"]

[profile.dev]
opt-level = 3
overflow-checks = false  # Go FAAASSTTT!

[dependencies]
filebuffer = "0.4"
clap = { version = "3.1.1", features = ["derive"] }
rayon = "1.8.1"
